# Appeals-Bot

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 20251019_0001_init.py
app/core/: logging.py  settings.py
app/db/: models.py  repositories.py  session.py
app/services/: appeals.py  notifications.py
app/telegram/: keyboards.py  main.py
app/telegram/routers/: admin.py  admin_appeal_manage.py  admin_appeals.py  admin_commissions.py  apply.py  public.py  public_commissions.py  track.py
app/telegram/states/: appeal.py  commission.py
app/utils/: formatting.py
